[FIX] base: fix .o_onboarding_btn_close overlapping
Before this commit, on smaller screens the onboarding steps illustration
sometimes overlapped the close button, making it difficult to dismiss
the onboarding steps.

This fix ensures the close button is no longer obscured.

task-3749740

closes odoo/odoo#165453

X-original-commit: 7035b3584bdd3db4e775f13976548cf1ef4f2f3f

--- a/addons/onboarding/static/src/scss/onboarding.scss
+++ b/addons/onboarding/static/src/scss/onboarding.scss
@@ -26,6 +26,11 @@ $o-onboarding-step-width: map-get($container-max-widths, 'lg') / 4 !default;
         animation: o_onboarding_slideInUpDownOut;
         animation-duration: 6s;
     }
+    
+    // !important required for compatibility (z-index-1 in xml)
+    .o_onboarding_btn_close {
+        z-index: 2 !important;
+    }
 
     // = Step Design
     // ------------------------------------------------------------------------
